adição de novas funcionalidades.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,8 @@
 
 en:
   hello: "Hello world"
+  enumerize:
+    participante:
+      tipo_pagamento:
+        dinheiro: "Dinheiro"
+        deposito: "Depósito"
